welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: ')' expected but ';' found.
    Brosse(T((k+decalage)%x) ; avance()
                             ^